Contents bugs & alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@
 }
 
 body {
-    color: #828bb2;
+    color: #525974;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 14px;
     font-weight: 300;
@@ -1226,7 +1226,7 @@ th {
 
 .col-lg-5,
 .home-banner-left {
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 .home-banner-left h1 {
